--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@microsoft/sp-property-pane": "1.13.0-dev.220",
     "@microsoft/sp-webpart-base": "1.13.0-dev.220",
     "@microsoft/sp-lodash-subset": "1.13.0-dev.220",
-    "@microsoft/sp-office-ui-fabric-core": "1.13.0-dev.220"
+    "@microsoft/sp-office-ui-fabric-core": "1.13.0-dev.220",
+    "@microsoft/sp-http": "1.13.0-dev.220",
+    "office-ui-fabric-react": "7.177.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "1.13.0-dev.220",
@@ -22,6 +26,8 @@
     "@microsoft/rush-stack-compiler-3.7": "0.2.3",
     "gulp": "~4.0.2",
     "ajv": "~5.2.2",
-    "@types/webpack-env": "1.13.1"
+    "@types/webpack-env": "1.13.1",
+    "@types/react": "16.9.51",
+    "@types/react-dom": "16.9.8"
   }
 }
